--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(gameEngine include)
 
-file(GLOB SOURCES "src/*.cpp")
-add_executable(gameEngine ${SOURCES})
+file(GLOB SOURCES "src/*/*.cpp")
+add_executable(gameEngine ${SOURCES} src/main.cpp)
 
 #GLFW
 find_package(glfw3 3.3 REQUIRED)
