--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "glfw"]
-	path = glfw
+	path = lib/glfw
 	url = https://github.com/glfw/glfw
 [submodule "glm"]
-	path = glm
+	path = lib/glm
 	url = https://github.com/g-truc/glm
