Break up object manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(gameEngine include)
 include_directories(gameEngine lib)
 
 
-file(GLOB SOURCES "src/*/*.cpp")
+file(GLOB SOURCES "src/*/*.cpp" "src/*/*/*.cpp")
 file(GLOB LIB "lib/glad/*.c" "lib/imgui/*.cpp" "lib/stb/*.cpp")
 add_executable(gameEngine ${SOURCES} ${LIB} src/main.cpp)
 
